Update on Overleaf.

--- a/ATE_text_only_short_Intro.tex
+++ b/ATE_text_only_short_Intro.tex
@@ -160,7 +160,7 @@ introgressed SNPs, to the specimens radiocarbon date
 (\cite{fu_genome_2014}).
 
 A higher amount of Neandertal admixture segments in present-day East-Asians was identified by using the second set of approaches. To explain the higher amount of Neandertal ancestry in these populations a second admixture event was suggested at the same time as the admixture between Neandertals and
-all non-Africans (\cite{kim_selection_2015,vernot_complex_2015}).  The identification of segments is largely independent from the later dating, and can be done using a variety of methods.(\cite{racimo_signatures_2017,seguin_orlando_paleogenomics_2014,vernot_excavating_2016,sankararaman_combined_2016,skov_detecting_2018}. The length distribution of the obtained fragments is then used to estimate the time of the admixture pulse, typically using an exponential model.
+all non-Africans (\cite{kim_selection_2015,vernot_complex_2015}).  The identification of segments is largely independent from the later dating, and can be done using a variety of methods.(\cite{racimo_signatures_2017,seguin_orlando_paleogenomics_2014,vernot_excavating_2016,sankararaman_combined_2016,skov_detecting_2018}). The length distribution of the obtained fragments is then used to estimate the time of the admixture pulse, typically using an exponential model.
 
 The Denisovan human
 admixture time point was dated to lie in the interval between 44,000--54,000 ya using the ALD
@@ -176,15 +176,15 @@ admixture events with Denisovans, one in line with previous estimates at
 be around 29.8 kya (95\% CI 14.4-50.4 kya)
 (\cite{jacobs_multiple_2019}).
 
-Here, we are manly interested in the gene flow model these studies used and its implication.
+Here, we are manly interested in the admixture model these studies used and its implication.
 
 The most widely used model is one where gene flow is constant through time (\cite{nielsen_distinguishing_2001,hey_multilocus_2004}), which does not have a time component. However, for dating admixture, it is generally assumed that gene flow
 happens over a very short time period, in a single \textit{admixture pulse} (\cite{moorjani_history_2011}), usually modelled as a single generation
-of gene flow. While convenient for inference, one cannot use this approach to distinguish an extend period of gene flow from an admixture pulse (\cite{pickrell_toward_2014}). 
-Here, we are chiefly interested in gene flow between Neandertals and modern humans, which was previously modeled assuming a one-generation pulse of admixture. Dating this gene flow event accurately would inform several questions of  great importance, but not always the same aspect of the gene flow is the one of primary interest. For example, if we are interested in dating the out-of-Africa migration of our ancestors, the start of the gene flow between Neandertals and modern humans is of primary interest, as this establishes modern humans and Neandertals in sympatry, likely outside of Africa.
+of gene flow. While convenient for inference, one cannot use this approach to distinguish an extend period of admixture from an admixture pulse (\cite{pickrell_toward_2014}). 
+Here, we are chiefly interested in gene flow between Neandertals and modern humans, which was previously modeled assuming a one-generation pulse of admixture. Dating the duration of the admixture event accurately would inform several questions of  great importance, but not always the same aspect of the adixture is the one of primary interest. For example, if we are interested in dating the out-of-Africa migration of our ancestors, the start of the gene flow between Neandertals and modern humans is of primary interest, as this establishes modern humans and Neandertals in sympatry, likely outside of Africa.
 In contrast, the date of the most recent gene flow between Neandertals and modern humans may be informative for dating the extinction of Neandertals. Under an admixture pulse model, which assumes that these two times coincide, hypotheses about the impact of modern human colonization of Eurasia on Neandertal extinction cannot be evaluated.
 
-Thus, our goal here is to examine when an admixture pulse can be rejected for more general models of continuous gene flow (Figure \ref{fig:fig1}.  Using a continuous model, we are interested in establishing the start and end of admixture between Neandertals and modern humans, not just the mean admixture time. This is a difficult problem, as it requires deconvoluting an exponential mixture, which is notoriously hard (\cite{dasgupta_mixture_2008}). Thus, we also need to carefully evaluate the potential technical and biological factors that may introduce additional biases (\cite{pool_inference_2009,gravel_population_2012,liang_lengths_2014}).
+Thus, our goal here is to examine when an admixture pulse can be rejected for more general models of continuous admixture (Figure \ref{fig:fig1}).  Using a continuous model, we are interested in establishing the start and end of admixture between Neandertals and modern humans, not just the mean admixture time. This is a difficult problem, as it requires deconvoluting an exponential mixture, which is notoriously hard (\cite{dasgupta_mixture_2008}). Thus, we also need to carefully evaluate the potential technical and biological factors that may introduce additional biases (\cite{pool_inference_2009,gravel_population_2012,liang_lengths_2014}).
 For this purpose, we explore these factors influencing the inferred time of admixture pulses, to gauge their relative importance.
 
 
@@ -196,7 +196,7 @@ In general the model assumes that introgressed segments are rare and inbreeding 
 Violations of these assumptions are known to influence the mean time
 estimates. Hence, the effect of assuming a one-generation pulse has to
 be contrasted with other influencing factors, for both a scenario of
-pulse-like and multi-generation long admixture. 
+pulse-like and multi-generation continuous admixture. 
 
 
 \subsection{complex migration models}
@@ -222,7 +222,7 @@ for which parameters we can distinguish a pulse-like admixture event
 from a continuous event. We show that in many cases pulses cannot be
 distinguished from more continuous admixture events. Using the 1000 Genomes data, ALD inferred admixture times from Europeans are consistent with a multitude of duration times.
 We conclude that current
-methods are unsuitable to definitively answer when the contact between
+methods are unsuitable to definitively estimate the duration of admixture and thus answer when the contact between
 Neandertals and modern humans ended.
 
 \begin{figure}
@@ -539,19 +539,17 @@ introgression into non-Africans where enriched using the
 Lower-Enrichment Ascertainment scheme (LES) filtering for SNPs ancestral in
 all Africans and polymorphic in Neandertals. The pairwise weighted LD
 between the ascertained SNPs was computed using the ALDER program.
-Figure \ref{fig:fig1} C shows the expected weighted LD for different
+Figure \ref{fig:fig1} C shows the expected log weighted LD for different
 length of continuous admixture ranging from a one generation pulse to
 1500 generations.
 
-First, we compared estimates for different mean admixture times ranging from 250 generations ago to 2000 generations ago. We either used a pulse-like gene flow model where the gene flow is only one generation long or a continuous gene flow model for the simulations. The duration of gene flow under the continuous model is 50\% of the mean time (if the mean time is 250 generations ago gene flow ranges from 325 to 175 generations ago). Assuming only a one generation pulse to estimate the mean time, revealed only minor deviations between the two scenarios and the true
+First, we compared estimates for different mean admixture times ranging from 250 generations ago to 2000 generations ago. We either used a pulse-like admixture model where the gene flow is only one generation long or a continuous admixture. The duration of admixture under the continuous model is 50\% of the mean time (if the mean time is 250 generations ago gene flow ranges from 325 to 175 generations ago). Assuming only a one generation pulse to estimate the mean time revealed only minor deviations between the two scenarios and the true
 admixture time of 3\% to 5\% for the pulse and 1\% to 7\% for the
-continuous (Figure \ref{fig:fig2} A). Estimates for mean admixture times
-older than 1000 generations showed a slight overestimation, which is
-lesser for simulations under a continuous gene flow .
-The slight overestimation is consistent with the findings of previous
-studies estimating ancient admixture times using modern admixed
-populations
-(\cite{sankararaman_date_2012,fu_genome_2014,moorjani_genetic_2016}). To
+continuous (Figure \ref{fig:fig2} A). 
+
+
+
+To
 further investigate the effect of pulse and continuous gene flow on the
 admixture time estimates, we compared different durations of continuous
 admixture with a fixed mean time of admixture of 1500
@@ -588,7 +586,7 @@ Having established that the duration of continuous admixture under ideal
 circumstances is only marginally influential on admixture time
 estimates, we want to compare its effect to more realistic simulation scenarios. Two common assumptions, namely knowing the recombination pattern and knowing the demographic history, were implicitly used in the previous simulations.
 Previous studies reported that violations of these assumptions can have an effect on the admixture time estimates.
- Hence, we used the African-American genetic map and a more complex demography with substructure in the ancestral human population and additional gene flow between Africans and non-Africans after the Neadertal admixture ended (Figure \ref{fig:figS1}, for simulations under more realistic parameters. The genetic distance was assigned using the average recombination rate of the African-American genetic map.
+ Hence, we used the African-American genetic map and a more complex demography with substructure in the ancestral human population and additional gene flow between Africans and non-Africans after the Neadertal admixture ended (Supp. Fig. \ref{fig:figS1}), for simulations under more realistic parameters. The genetic distance was assigned using the average recombination rate of the African-American genetic map.
  Furthermore, we altered the used scheme for ascertainment of SNPs for admixture informative sites. We compared the LES where only
 positions in the admixed population are considered where both source
 populations are diverged from each other, to an even stricter scheme. The Higher-Enrichment Scheme (HES) requiring additional
@@ -636,7 +634,7 @@ admixture time estimates for a pulse or a multi-generation admixture are similar
 Building on the previous
 result we wanted to find out the conditions to retrieve the Lomax
 parameters i.e.~the duration of the admixture. We simulated an admixture
-scenario under a simple demography with varying duration of continuous
+scenario under a simple demography with varying durations of continuous
 admixture and sampled the population at different time points since the
 end of the gene flow. Doing so allows us to examine how close one has to
 sample form the end of a continuous admixture to still accurately
@@ -648,20 +646,20 @@ HapMap itself (knowing the population recombination map). We used the LES ascert
 a minimal distance of 0.05 cM. To fit the Lomax we can take advantage of
 the fact that the bias of the mean time estimates using the simplified
 one generation pulse model is relatively accurate. We can thus estimate
-lambda first by fitting an exponential and in a second step estimating k
-using a Lomax distribution with a starting parameter for lambda received
+the mean time first by fitting an exponential and in a second step estimating k
+using a Lomax distribution with a starting parameter for the mean time received
 from the exponential fit, to archive better convergent. Figure \ref{fig:fig4} A and C show the mean
 time estimates received from the Exponential fit. For simulations under a
-constant recombination the mean time can be estimated confidently for different durations and different sampling times after the end of the admixture event. Estimates for simulation under a recombination map only
+constant recombination the mean time received from the exponantial fit can be estimated confidently for different durations and different sampling times after the end of the admixture event. Estimates for simulation under a recombination map only
 assuming a constant rate when calculating the LD results in severely
 underestimation of the mean time estimates. Using the AAMap yields
 results closer to the true value and less downwards biased, however only
-using the exact same genetic map gives unbiased results. The mean time estimates received from the Lomax distribution show an overestimation on average and a higher variation (Supplement figure \ref{fig:figS2}).  Figure
-\ref{fig:fig4} B and D shows the corresponding duration estimates by the
+using the exact same genetic map gives unbiased results. The mean time estimates received from the Lomax distribution show an overestimation on average and a higher variation (Supp. Fig.  \ref{fig:figS2}).  Figure
+\ref{fig:fig4} B and D shows the corresponding admixture duration estimates by the
 Lomax fit. Accurate estimates can be obtained throughout the different
-gene flow length under a constant recombination rate, when sampled
+admixture durations under a constant recombination rate, when sampled
 recent from the end of the continuous admixture. Sampling further away from the end of the admixture results in less accurate estimates.  All simulations using a recombination map show a much higher
-variance in the estimates. Especially for a gene flow length longer then
+variance in the estimates. Especially for admixture durations longer then
 800 generations or sampled later then 50 generations away from the end
 of the admixture, the estimates are not reliably. If no precise genetic map
 is used to inferred the genetic distance between SNPs, no accurate
@@ -677,7 +675,7 @@ generations. With regard to scenarios of Neandertal admixture,
 accurately estimating the duration of possible continuous admixture from
 present day human genomes even under a constant rate is
 under powered. 
-Figure \ref{fig:fig5} shows multiple gene flow duration scenarios ranging from a one generation pulse to 2500 generations of continuous gene flow. All scenarios are compatible with the ALD data from 1000 Genome's CEU computed using YRI and the Altai, Vindija and Chagyrskaya high coverage as reference populations and a CEU specific fine-scale genetic map.
+Figure \ref{fig:fig5} shows multiple gene flow duration scenarios ranging from a one generation pulse to 2500 generations of continuous admixture. All scenarios are compatible with the ALD data from 1000 Genome's CEU computed using YRI and the Altai, Vindija and Chagyrskaya high coverage as reference populations and a CEU specific fine-scale genetic map.
 
 
 Additionally, we tried to classifying the two admixture scenarios using  Akaike's information
@@ -706,7 +704,7 @@ generations of gene flow. D) Lomax duration estimate of the scenario}
 \centering
 \includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/fig5-1.pdf}
 \caption{\label{fig:fig5} Different admixture duration models ranging
-from a one generation pulse tu 2500 generations for Neandertal admixture
+from a one generation pulse to 2500 generations for Neandertal admixture
 duration using all 1k Genome CEU individuals as the admixed population
 with all YRI and 3 high coverage Neandertals as reference populations. A) Weighted LD normal scaled B) Weighted LD log scaled.}
 \end{figure}
@@ -715,10 +713,11 @@ with all YRI and 3 high coverage Neandertals as reference populations. A) Weight
 
 Archaeological evidence suggests that Neandertals and modern human populations overlapped in some regions for
 a long period of time \citep{higham_timing_2014}, potentially resulting
-in continuous admixture over hundreds of generations. However, estimates for the time of Neandertal-Human admixture usually assumes only a one-generation pulse. In this study we were interested in the effect of this assumption and to relax it. We established that even for very long continuous admixture scenarios, estimates for the mean time are compatible with a pulse like admixture and the error in the estimates is out weighted by all other tested model parameters.  Although, reliable estimates can be obtained, they in turn do not hold any information on the boundaries of a potential continuous admixture scenario. This however could be highly informative about the first contact between humans and Neandertals and the potential time of Neandertal extinction.
+in continuous admixture over hundreds of generations. However, estimates for the time of Neandertal-Human admixture usually assumes only a one-generation pulse. 
 
-We tested the influence of different parameter scenarios on the admixture mean time estimates.
-We established that assuming a constant recombination rate will lead to sever underestimations of admixture times, whereas the other parameters tested (demography and analysis parameters) are far less influential. Although this bias is known from previous studies, we notice it is underappreciated that reliable mean time estimates can only be obtained using population specific recombination maps, especially for archaic admixture events. Using the information on influencing parameters, we could obtain admixture durations modeling the ALD using a Lomax distribution under ideal circumstances, where we exactly know the genetic distance between introgressed SNPs and the recombination process is constant. Relaxation of the latter assumption while still knowing the exact population specific recombination map  leads to  uncertainty in the estimates. This uncertainty depend on the duration and time of sampling from the end of the admixture. Crucially we could show that there is no power to correctly infer admixture durations even for long admixture scenarios under ideal circumstances if the event is to long ago. Likewise, reliable distinction between a pulse like admixture model and a multi-generation continuous model for Human-Neandertal admixture scenarios is not definite. We demonstrated that a multitude of different duration scenarios are compatible for the Human-Neandertal admixture estimated from  present-day non-Africans genomes. Hence, we conclude that using present day non-African human genomes for inference is not conclusive to resolve the duration of Neandertal admixture. As a consequence we could neither obtain genetic indications of the first contact between Humans and Neandertals nor for the time of potential Neandertal extinction.
+
+In this study we were interested in the effect of this assumption and to relax it. We suggested a model for continuous admixture over time following a Gamma distribution, where the introgressed segment length or ALD follows a Lomax distribution. Using the Gamma admixture model, we established that even for very long continuous admixture scenarios, estimates for the mean time are compatible with a pulse like admixture. Testing the influence of different parameter scenarios on the admixture mean time estimates, revealed that the error in the estimates is out weighted by all other tested model parameters. Assuming a constant recombination rate will lead to sever underestimations of admixture times, whereas the other parameters tested (demography and analysis parameters) are far less influential. Although this bias is known from previous studies, we notice it is underappreciated that reliable mean time estimates can only be obtained using population specific recombination maps, especially for archaic admixture events. Even though reliable estimates can be obtained using a population specific recombination map, they in turn do not hold any information on the boundaries of a potential continuous admixture scenario. This however could be highly informative about the first contact between humans and Neandertals and the potential time of Neandertal extinction.
+Hence, by using our continuous admixture model and the information on influencing parameters, we could obtain admixture durations modeling the ALD using the Lomax distribution under ideal circumstances, where we exactly know the genetic distance between introgressed SNPs and the recombination process is constant. Relaxation of the latter assumption while still knowing the exact population specific recombination map  leads to  uncertainty in the estimates. This uncertainty depends on the duration and time of sampling from the end of the admixture event. Crucially we could show that there is no power to correctly infer admixture durations even for long admixture scenarios under ideal circumstances if the event is to long ago. Likewise, reliable distinction between a pulse like admixture model and a multi-generation continuous model for Human-Neandertal admixture scenarios is not definite. We demonstrated that a multitude of different duration scenarios are compatible for the Human-Neandertal admixture estimated from  present-day non-Africans genomes. Hence, we conclude that using present day non-African human genomes for inference is not conclusive to resolve the duration of Neandertal admixture. As a consequence we could neither obtain genetic indications of the first contact between Humans and Neandertals nor for the time of potential Neandertal extinction.
 
 However, there are some ways to infer admixture event across time. Population differentiation between different introgressing archaic populations is a strong indicator for multi-generation admixture as shown in \cite{browning_analysis_2018}. Although not distinguishable by deconvoluting the length distribution of the archaic segments in the present-day East-Asian individuals to infer the time, the genetic differentiation between the segments with its implication of coming from different sources is unlikely to happen at the exact same time. Another possibility is using ancient DNA from admixed individuals to sample closer from the end of the admixture event. This could potentially help in either deconvolute discrete admixture pulses, which has the disadvantage of fitting multiple parameters or using our suggested approach on the ancient data. With a sufficient amount of ancient DNA samples from the same time period one could infer a recombination map. With that our study suggest that it would be possible to estimate a potential multi-generation admixture duration. One could also think of combining both ideas. Allocate introgressed segments from ancient DNA samples into different ancestry clusters according to their genetic differentiation and separately inferring mean and duration of the admixture time on each ancestry cluster. 
 
@@ -731,8 +730,13 @@ Conclusions:
   \item Estimating  the mean time and especially the duration of gene flow is only possible with a highly precise genetic map. (check)
   \item The signal of continuous gene flow is hard to detect if the gene flow is not long enough or to far in the past. (check)
   \item Reliably distinguishing the models is difficult. (check)
-  \item Population differentiation can help identifying different admixture events across time (e.g. Browning et al. 2018)
-  \item sampling close to the end of the admixture e.g. using ancient genomes and using a accurate recombination map enables the inference of admixture duration 
+\end{itemize}
+
+Outlook:
+
+\begin{itemize}
+  \item Population differentiation can help identifying different admixture events across time (e.g. Browning et al. 2018) (check)
+  \item sampling close to the end of the admixture e.g. using ancient genomes and using a accurate recombination map enables the inference of admixture duration (check)
   
 \end{itemize}
 
@@ -750,7 +754,7 @@ Conclusions:
 \begin{figure}
 \centering
 \includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/figS1-1.pdf}
-\caption{\label{fig:figS1}The two tested demographies of humans splitting into African population (AFR) and non-African (non-AFR) with admixture from Neandertals (NEA) into non-Africans. The simple demographic model with constant population sizes and the complex with rapid population size changes (1), substructure in Africa, where after an initial earlier split and isolation the structured population exchange migrants till the out-of-Africa event (2) and additional gene flow between Africans and non-Africans after the Neandertal admixture (3).}
+\caption{\label{fig:figS1} The two tested demographic histories of humans splitting into African population (AFR) and non-African (non-AFR) with admixture from Neandertals (NEA) into non-Africans. A) The simple demographic model with constant population sizes. B) The complex demographic model with rapid population size changes (1), substructure in Africa, where after an initial earlier split and isolation the structured population exchange migrants till the out-of-Africa event (2) and additional gene flow between Africans and non-Africans after the Neandertal admixture (3).}
 \end{figure}
 
 \begin{figure}
