--- a/Admixture_Time_Inference_Paper_Draft.Rmd
+++ b/Admixture_Time_Inference_Paper_Draft.Rmd
@@ -1003,10 +1003,27 @@ compare(Effect_size_fixed_s,Effect_size_fixed_id_s,Effect_size_varying_intercept
 traceplot(Effect_size_fixed_id)
 ```
 
-```{r message=FALSE, echo=FALSE,warning=FALSE, cache=T}
+```{r eval=FALSE, message=FALSE, echo=FALSE,warning=FALSE}
+B_model_result <- precis(Effect_size_fixed_s,prob = 0.95)
+
+A_pred <- link( Effect_size_fixed_s , data=data.frame(A=seq(0,1,0.05),MD=0,D=0,R=0,GF=0) )
+A_pred.mean <- apply( A_pred , 2 , mean )
+A_pred.PI <- apply( A_pred , 2 , PI , prob=0.95 )
+boxplot(rep(as.numeric(as.character(Simplest_case$Diff_s)),Simplest_case$Freq),
+      rep(as.numeric(as.character(Plot_model$Diff_s[Plot_model$Combination=='Simple_D_Sim_HES_0_P'])),Plot_model$Freq[Plot_model$Combination=='Simple_D_Sim_HES_0_P']), 
+      col=col.alpha(rangi2,0.5),ylim=c(-0.5,0.5) )
+# plot the MAP line, aka the mean mu for each weight
+plot( seq(0,1,0.05) , A_pred.mean )
+# plot a shaded region for 89% PI
+shade(A_pred.PI ,seq(0,1,0.05))
+
+```
+
+```{r  message=FALSE, echo=FALSE,warning=FALSE, cache=T}
 B_model_result <- precis(Effect_size_fixed_s,prob = 0.95)
 
 ```
+
 
 
 Having established that the duration of continuous admixture under ideal
@@ -1095,9 +1112,9 @@ Plot_Fig_2_X <- function(Null_Case,Predictore_case,B_Model,Int,Slope,x.lable,x.t
     Px <-  ggplot(Data,aes(x=as.character(Combination),y=as.numeric(as.character(Diff_s)),colour=Col))+
       geom_point(aes(size = Freq),show.legend = F)+
       geom_boxplot(show.legend = F)+
-      geom_abline(intercept = B_Model$mean[Int]-B_Model$mean[Slope],slope = B_Model$mean[Slope],linetype=2)+
-      geom_abline(intercept = B_Model$`2.5%`[Int]-B_Model$`2.5%`[Slope],slope = B_Model$`2.5%`[Slope])+
-      geom_abline(intercept = B_Model$`97.5%`[Int]-B_Model$`97.5%`[Slope],slope = B_Model$`97.5%`[Slope])+
+      #geom_abline(intercept = B_Model$mean[Int]-B_Model$mean[Slope],slope = B_Model$mean[Slope],linetype=2)+
+      #geom_abline(intercept = B_Model$`2.5%`[Int]-B_Model$`2.5%`[Slope],slope = B_Model$`2.5%`[Slope])+
+      #geom_abline(intercept = B_Model$`97.5%`[Int]-B_Model$`97.5%`[Slope],slope = B_Model$`97.5%`[Slope])+
       geom_abline(intercept = 0,slope = 0,linetype=2,aes(colour='grey'))+
       labs(x = xlab)+
       labs(y = ylab)+
@@ -1117,9 +1134,9 @@ Plot_Fig_2_X <- function(Null_Case,Predictore_case,B_Model,Int,Slope,x.lable,x.t
     Px <-  ggplot(Data,aes(x=as.character(Combination),y=as.numeric(as.character(Diff_s)),colour=Col))+
       geom_point(aes(size = Freq),show.legend = F)+
       geom_boxplot(show.legend = F)+
-      geom_abline(intercept = B_Model$mean[Int]-B_Model$mean[Slope],slope = B_Model$mean[Slope],linetype=2)+
-      geom_abline(intercept = B_Model$`2.5%`[Int]-B_Model$`2.5%`[Slope],slope = B_Model$`2.5%`[Slope])+
-      geom_abline(intercept = B_Model$`97.5%`[Int]-B_Model$`97.5%`[Slope],slope = B_Model$`97.5%`[Slope])+
+      #geom_abline(intercept = B_Model$mean[Int]-B_Model$mean[Slope],slope = B_Model$mean[Slope],linetype=2)+
+      #geom_abline(intercept = B_Model$`2.5%`[Int]-B_Model$`2.5%`[Slope],slope = B_Model$`2.5%`[Slope])+
+      #geom_abline(intercept = B_Model$`97.5%`[Int]-B_Model$`97.5%`[Slope],slope = B_Model$`97.5%`[Slope])+
       geom_abline(intercept = 0,slope = 0,linetype=2,aes(colour='grey'))+
       labs(x = xlab)+
       #labs(y = "Standardized difference \nbetween true and estimated time")+
@@ -1529,22 +1546,11 @@ Fit_Exp_fn <- function(Data,affine){
     C_exp_est <- as.numeric((par1_exp[3]))
     
     fit1_exp <- nls(wcorr ~ (A*exp(-(dist/100)/s)+c), start=par1_exp, control=list(maxiter=10000, warnOnly=TRUE)) 
-  } else {
-    fm1_exp <- function(x) x[1]*exp(-(dist/100)/x[2])
-    fm2_exp <- function(x) sum((wcorr-fm1_exp(x))^2)
-    fm3_exp <- DEoptim(fm2_exp, lower=c(1e-6,0), upper=c(1, 1), control=list(trace=FALSE))
-    
-    par1_exp <- fm3_exp$optim$bestmem
-    # parameters for y ~ Ae-mt
-    names(par1_exp) <- c("A", "s")
-    A_exp_est <- as.numeric((par1_exp[1]))
-    Lambda_est <-as.numeric((par1_exp[2]))  	# rate of decay of exponential
-    
-    fit1_exp <- nls(wcorr ~ (A*exp(-(dist/100)/s)), start=par1_exp, control=list(maxiter=10000, warnOnly=TRUE))
-    
   }
   return(fit1_exp)
 }
+
+
 
 Fit_Lomax_fn <- function(Data,fixed_w){
   xx=Data
@@ -1611,10 +1617,81 @@ for(i in list(Expo_fit_result,all_t_lomax_est[[1]],all_t_lomax_est[[2]],all_t_lo
 
 ```
 
+```{r eval=FALSE,message=FALSE, echo=FALSE,warning=FALSE}
+# Try to get proper CI for the log exp and lomax
+Fit_Exp_log_fn <- function(Data){
+   xx=Data
+  
+  dist=xx$dist
+  wcorr=xx$wcorr
+  #Fitting an Exponential
+  
+    fm1_exp <- function(x) log(x[1])-((dist/100)/x[2])
+    #fm2_exp <- function(x) sum(complete.cases((wcorr-fm1_exp(x))^2))
+    fm2_exp <- function(x) sum((wcorr-fm1_exp(x))^2)
+    fm3_exp <- DEoptim(fm2_exp, lower=c(1e-6,1e-8), upper=c(0.5, 0.5), control=list(trace=FALSE))
+    
+    par1_exp <- fm3_exp$optim$bestmem
+    # parameters for y ~ Ae-mt
+    names(par1_exp) <- c("A", "s")
+    A_exp_est <- as.numeric((par1_exp[1]))
+    Lambda_est <-as.numeric((par1_exp[2]))  	# rate of decay of exponential
+    
+    fit1_exp <- nls(wcorr ~ log(A) -((dist/100)/s), start=par1_exp, control=list(maxiter=10000, warnOnly=TRUE)) 
+  return(fit1_exp)
+}
+Expo_fit_result_log <- Fit_Exp_log_fn(Data = Get_points(input_pol_corrected,lval,hval=0.4,log = T))
+
+## confidenc intervals are bs for the log
+
+x=Expo_fit_result
+summary(x)
+
+# Manual CI for the mean time of admixture by a normal approximation to the exact solution using the chisq
+S_lwr_approx <- coef(x)[[2]]*(1-(1.96/sqrt(length(xdata[,1]))))
+S_upr_approx <- coef(x)[[2]]*(1+(1.96/sqrt(length(xdata[,1]))))
+1/coef(x)[[2]]
+1/S_lwr_approx
+1/S_upr_approx
+confint(x)
+
+pred_exp <- data.frame(xdata$dist,predict(Expo_fit_result))
+ci_expo_lwr = as.data.frame(predict(Expo_fit_result) *(1-(1.96/sqrt(length(xdata[,1])))))
+ci_expo_upr = as.data.frame(predict(Expo_fit_result) *(1+(1.96/sqrt(length(xdata[,1])))))
+plot(xdata$dist,xdata$wcorr,xlim=c(0,0.5))
+lines(xdata$dist,pred_exp$predict.Expo_fit_result.,lwd=2,lty=2,col="red")
+lines(xdata$dist,ci_expo_lwr$`predict(Expo_fit_result) * (1 - (1.96/sqrt(length(xdata[, 1]))))`,lwd=2,lty=1,col="red")
+lines(xdata$dist,ci_expo_upr$`predict(Expo_fit_result) * (1 + (1.96/sqrt(length(xdata[, 1]))))`,lwd=2,lty=1,col="red")
+
+pred_exp <- EXP_Log_fn(xdata$dist,coef(Expo_fit_result)[[1]],coef(Expo_fit_result)[[2]])
+ci_expo_lwr = as.data.frame(pred_exp *(1-(1.96/sqrt(length(xdata[,1])))))
+ci_expo_upr = as.data.frame(pred_exp *(1+(1.96/sqrt(length(xdata[,1])))))
+plot(xdata$dist,log(xdata$wcorr),xlim=c(0,0.5))
+lines(xdata$dist,pred_exp,lwd=2,lty=2,col="red")
+lines(xdata$dist,ci_expo_lwr$`predict(Expo_fit_result) * (1 - (1.96/sqrt(length(xdata[, 1]))))`,lwd=2,lty=1,col="red")
+lines(xdata$dist,ci_expo_upr$`predict(Expo_fit_result) * (1 + (1.96/sqrt(length(xdata[, 1]))))`,lwd=2,lty=1,col="red")
+
+df <- c()
+df$pred <- EXP_Log_fn(xdata$dist,coef(Expo_fit_result)[[1]],coef(Expo_fit_result)[[2]])
+se = summary(Expo_fit_result_log)$sigma
+ci = as.data.frame(outer(df$pred, c(outer(se, c(-1,1), '*'))*1.96, '+'))
+
+plot(xdata$dist,log(xdata$wcorr),xlim=c(0,0.5))
+lines(xdata$dist,df$pred,lwd=2,lty=2,col="red")
+lines(xdata$dist,ci$V1,lwd=2,lty=1,col="red")
+lines(xdata$dist,ci$V2,lwd=2,lty=1,col="red")
+
+yy=as.data.frame(investr::predFit(Expo_fit_result_log,newdata=list(dist=xdata$dist),interval="prediction"))
+plot(xdata$dist,log(xdata$wcorr),xlim=c(0,1))
+lines(xdata$dist,yy$fit,lwd=2,lty=2,col="red")
+lines(xdata$dist,yy$lwr,lwd=2,lty=1,col="red")
+lines(xdata$dist,yy$upr,lwd=2,lty=1,col="red")
+```
 
 ```{r fig5, message=FALSE, echo=FALSE,warning=FALSE,fig5.pos="H",fig.width=9,fig.height=6,fig.cap="\\label{fig:fig5} Different admixure duration models ranging from a one generation pulse tu 2500 generations for Neandertal admixture duration using all 1k Genome CEU individuals as the admixed population with all YRI and 3 high coverage Neandertals as reference populations."}
 
 cbPalette_viridis <- viridis(length(t_d),option = "D")
+
 
 ggplot_fit_data_transf_fn <- function(Expo_fit_result,all_t_lomax_est,log){
     if(log==T){
@@ -1667,14 +1744,68 @@ ggplot_fit_data_transf_fn <- function(Expo_fit_result,all_t_lomax_est,log){
   
 }
 
+ggplot_fit_data_transf_fn_2 <- function(Expo_fit_result,all_t_lomax_est,log){
+    if(log==T){
+      fit.ggplot_exp=data.frame(y=EXP_Log_fn(xdata$dist,coef(Expo_fit_result)[[1]],coef(Expo_fit_result)[[2]]),x=xdata$dist)
+      fit.ggplot_exp$lowCI <- EXP_Log_fn(xdata$dist,confint(Expo_fit_result)[[1,1]],confint(Expo_fit_result)[[2,1]])
+      fit.ggplot_exp$highCI <- EXP_Log_fn(xdata$dist,confint(Expo_fit_result)[[1,2]],confint(Expo_fit_result)[[2,2]])
+      fit.ggplot_exp$Duration <- 1e5
+  } else {
+      fit.ggplot_exp=data.frame(as.data.frame(investr::predFit(Expo_fit_result,newdata=list(dist=xdata$dist),interval="prediction")),x=xdata$dist)
+      fit.ggplot_exp$Duration <- 1e5
+  }
+  Real_Lomax_fit_Result <- c()
+  if(log==T){
+    for(i in 1:length(t_d)){
+      fit.ggplot_lomax_x=data.frame(y=LOMAX_Log_fn(xdata$dist,coef(all_t_lomax_est[[i]])[[2]],coef(all_t_lomax_est[[i]])[[1]],
+                                               1/(t_expo_est*(t_expo_est/((t_d[i]/4)^2)))),x=xdata$dist)
+      fit.ggplot_lomax_x$lowCI <- LOMAX_Log_fn(xdata$dist,confint(all_t_lomax_est[[i]])[[2,1]],confint(all_t_lomax_est[[i]])[[1,1]],
+                                             1/(t_expo_est*(t_expo_est/((t_d[i]/4)^2))))
+      fit.ggplot_lomax_x$highCI <- LOMAX_Log_fn(xdata$dist,confint(all_t_lomax_est[[i]])[[2,2]],confint(all_t_lomax_est[[i]])[[1,2]],
+                                            1/(t_expo_est*(t_expo_est/((t_d[i]/4)^2))))
+      fit.ggplot_lomax_x$Duration <- t_d[i]
+      Real_Lomax_fit_Result <- rbind(Real_Lomax_fit_Result,fit.ggplot_lomax_x)
+      Real_Lomax_fit_Result <- as.data.frame(Real_Lomax_fit_Result)
+    }
+    } 
+  else {
+    for(i in 1:length(t_d)){
+      fit.ggplot_lomax_x=data.frame(as.data.frame(investr::predFit(all_t_lomax_est[[i]],newdata=list(dist=xdata$dist),interval="prediction")),x=xdata$dist)
+      fit.ggplot_lomax_x$Duration <- t_d[i]
+      Real_Lomax_fit_Result <- rbind(Real_Lomax_fit_Result,fit.ggplot_lomax_x)
+      Real_Lomax_fit_Result <- as.data.frame(Real_Lomax_fit_Result)
+  }
+    
+}
+
+  Real_fit_Result <- rbind(Real_Lomax_fit_Result,fit.ggplot_exp)
+  Real_fit_Result <- as.data.frame(Real_fit_Result)
+  Real_fit_Result$Duration <- as.factor(Real_fit_Result$Duration)
+  return(Real_fit_Result)
+  
+}
 Real_fit_Result_norm <- ggplot_fit_data_transf_fn(Expo_fit_result, all_t_lomax_est, log=F)
+Real_fit_Result_norm_2<- ggplot_fit_data_transf_fn_2(Expo_fit_result, all_t_lomax_est, log=F)
+
+Real_data_Plot_normal_2 <- ggplot(data=Real_fit_Result_norm_2,aes(x = x, y = fit,color=Duration,fill=Duration))+
+  geom_point(data=xdata,aes(x=dist,y=wcorr,color=NULL,fill=NULL),show.legend = F)+
+  xlim(0,0.5)+
+  #ylim(-15,-5)+
+  geom_ribbon(aes(ymin=lwr,ymax=upr, fill = Duration,color=NULL), alpha = 0.3,show.legend = F)+
+  geom_line(data=Real_fit_Result_norm_2,aes(x = x, y = fit,color=Duration))+
+  scale_color_manual("Admixture Duration",
+                     values = c(c(cbPalette_viridis,cbPalette_viridis[1])),
+                     labels = c(c(t_d,"Pulse")))+
+  scale_fill_manual( values = c(c(cbPalette_viridis,cbPalette_viridis[1])))+
+  labs(x = "Genetic distance (cM)")+
+  labs(y = "weighted LD") 
 
 Real_data_Plot_normal <- ggplot(data=Real_fit_Result_norm,aes(x = x, y = y,color=Duration,fill=Duration))+
   geom_point(data=xdata,aes(x=dist,y=wcorr,color=NULL,fill=NULL),show.legend = F)+
   xlim(0,0.5)+
   #ylim(-15,-5)+
-  geom_line(data=Real_fit_Result_norm,aes(x = x, y = y,color=Duration))+
   geom_ribbon(aes(ymin=lowCI,ymax=highCI, fill = Duration,color=NULL), alpha = 0.5,show.legend = F)+
+    geom_line(data=Real_fit_Result_norm,aes(x = x, y = y,color=Duration))+
   scale_color_manual("Admixture Duration",
                      values = c(c(cbPalette_viridis,"red")),
                      labels = c(c(t_d,"Pulse")))+
@@ -1688,16 +1819,16 @@ Real_data_Plot_log <- ggplot(data=Real_fit_Result_log,aes(x = x, y = y,color=Dur
   xlim(0,0.5)+
   ylim(-13,-5)+
   geom_line(data=Real_fit_Result_log,aes(x = x, y = y,color=Duration))+
-  geom_ribbon(aes(ymin=lowCI,ymax=highCI, fill = Duration,color=NULL), alpha = 0.5,show.legend = F)+
+  #geom_ribbon(aes(ymin=lowCI,ymax=highCI, fill = Duration,color=NULL), alpha = 0.5,show.legend = F)+
   scale_color_manual("Admixture Duration",
-                     values = c(c(cbPalette_viridis,"red")),
+                     values = c(c(cbPalette_viridis,cbPalette_viridis[1])),
                      labels = c(c(t_d,"Pulse")))+
-  scale_fill_manual( values = c(c(cbPalette_viridis,"red")))+
+  scale_fill_manual( values = c(c(cbPalette_viridis,cbPalette_viridis[1])))+
   labs(x = "Genetic distance (cM)")+
   labs(y = "log weighted LD")
 
 
-ggarrange(Real_data_Plot_normal,Real_data_Plot_log,ncol = 2,nrow = 1,
+ggarrange(Real_data_Plot_normal_2,Real_data_Plot_log,ncol = 2,nrow = 1,
           labels = c("A","B")
           ,common.legend = T,legend = 'bottom')
 
